# CmakeTest

./: CMakeLists.txt  README.md  run.sh  runhello.sh
src/: CMakeLists.txt  hello.cpp
